<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/paises"
        android:layout_width="142dp"
        android:layout_height="36dp"
        android:text="@string/pregunta"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <RadioGroup
        android:id="@+id/rdgp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/paises"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63">

        <RadioButton
            android:id="@+id/respuesta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/respuesta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/respuesta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/respuesta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio4"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_otropais"
        android:layout_width="77dp"
        android:layout_height="74dp"
        android:background="@drawable/eurobot"
        android:foreground="@drawable/eurobot"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="282dp"
        android:layout_height="195dp"
        app:layout_constraintBottom_toTopOf="@+id/paises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142"
        app:srcCompat="@drawable/euromap" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="253dp"
        android:layout_height="41dp"
        android:text="@string/enunciado"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/enunbot"
        android:layout_width="138dp"
        android:layout_height="31dp"
        android:text="@string/enunciadobot"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_otropais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.965" />

</androidx.constraintlayout.widget.ConstraintLayout>